Fix details component height issue on small desktop screen

--- a/public/main.css
+++ b/public/main.css
@@ -1144,7 +1144,7 @@ strong {
   .details__images {
     display: grid;
     grid-gap: 0.6vw;
-    grid-template-columns: repeat(2, 1fr); }
+    grid-template-columns: repeat(2, 0.4fr); }
     @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
       .details__images {
         display: -ms-flexbox;
