--- a/src/scss/partials/_projectdetails.scss
+++ b/src/scss/partials/_projectdetails.scss
@@ -60,7 +60,7 @@
 	&__images {
 		display: grid;
 		grid-gap: 0.6vw;
-		grid-template-columns: repeat(2, 1fr);
+		grid-template-columns: repeat(2, 0.4fr);
 
 		@media screen and ( -ms-high-contrast: active ), ( -ms-high-contrast: none ) {
 			display: -ms-flexbox;
